# cudeform

./: .gitmodules  CMakeCache.txt  CMakeLists.txt
cudeform/: CMakeLists.txt
cudeform/cudeform/: CMakeLists.txt
cudeform/cudeformpy/: CMakeLists.txt  __init__.py  setup.py
